@@ -4,6 +4,9 @@ NOTE: Please place changes under the version that will be released next.
 
 ************************* Version 8.04x: *********************************
 
+BUG: (9/8/06, SMR) Crash when reading HSpice measurement files (Bug #1214).
+FIX: Improved HSpiceOut.addMeasurementData() to handle all files.
+
 IMP: (9/7/06, SMR) Removed "Easy Selection of Annotation Text" from Selection Preferences
      (It was never used...just an idle checkbox that does nothing).
 
